[package]
name = "rmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dotenv = "0.15"
lapin = "2.3"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40" 
tracing-subscriber = "0.3.18" 
futures-util = "0.3.30" 
