[package]
name = "rmq"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.103"
lapin = { version = "2.5", features = ["native-tls"] }
tokio = { version = "1.52", features = ["full"] }
log = "0.4"
futures-util = "0.3.32"

[dev-dependencies]
env_logger = "0.11" 
